# flask-htmx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  readme_include.rst  run.py
.github/workflows/: release.yml  test.yml
docs/: conf.py  flask_htmx.htmx.rst  flask_htmx.responses.rst  index.rst  quickstart.rst  requirements.txt
flask_htmx/: __init__.py  constants.py  htmx.py  responses.py
templates/: index.html
templates/partials/: thing.html
tests/: conftest.py  test_htmx_request_headers.py  test_htmx_responses.py  test_init_app.py  test_something.py
