[tool.poetry]
name = "flask-htmx"
version = "0.1.0"
description = "A Flask extension to work with HTMX."
authors = ["Edmond Chuc <edmond.chuc@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/edmondchuc/flask-htmx"
repository = "https://github.com/edmondchuc/flask-htmx"
#documentation = ""
keywords = ["Flask", "HTMX", "Python", "Web"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Flask",
]
packages = [
    { include = "flask_htmx" }
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
Sphinx = "^4.4.0"
furo = "^2022.1.2"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/edmondchuc/flask-htmx/issues"