[tool.poetry]
name = "flask-htmx"
version = "0.1.1"
description = "A Flask extension to work with HTMX."
authors = ["Edmond Chuc <edmond.chuc@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/edmondchuc/flask-htmx"
repository = "https://github.com/edmondchuc/flask-htmx"
documentation = "https://flask-htmx.readthedocs.io"
keywords = ["Flask", "HTMX", "Python", "Web"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Flask",
]
packages = [
    { include = "flask_htmx" }
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2 || ^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
Sphinx = "^4.4.0"
furo = "^2022.1.2"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.4.0"
pre-commit = ">=2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/edmondchuc/flask-htmx/issues"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line_length = 88